[gd_scene format=3 uid="uid://bekheq55rmxdh"]

[ext_resource type="Theme" uid="uid://bqsb6ctvb748t" path="res://assets/main_theme.tres" id="1_con2f"]
[ext_resource type="Script" uid="uid://bqllq5gpx87yh" path="res://scripts/menu.gd" id="2_4ytvr"]
[ext_resource type="Shader" uid="uid://d4ahrrh7pekph" path="res://shaders/sliding_background.gdshader" id="2_mhnvy"]
[ext_resource type="Texture2D" uid="uid://djc1xfk35nder" path="res://assets/sprites/Greaser_Lizard_lrg_vint.png" id="3_4ytvr"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_g3eks"]
shader = ExtResource("2_mhnvy")
shader_parameter/pattern_sampler = ExtResource("3_4ytvr")
shader_parameter/bg_color = Color(0.78039217, 0.5529412, 1, 1)
shader_parameter/pattern_color = Color(0, 0.32249647, 0, 1)
shader_parameter/pattern_size = 150.0

[node name="Menu" type="Control" unique_id=2024535620]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_con2f")
script = ExtResource("2_4ytvr")

[node name="Background" type="ColorRect" parent="." unique_id=216197571]
z_index = 1
material = SubResource("ShaderMaterial_g3eks")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleCard" type="RichTextLabel" parent="." unique_id=1329092805]
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 192.0
offset_top = 53.0
offset_right = -124.0
offset_bottom = -427.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 100
text = "PLACEHOLDER"

[node name="PlayBtn" type="Button" parent="." unique_id=614155195]
unique_name_in_owner = true
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 433.0
offset_top = 256.0
offset_right = -414.0
offset_bottom = -322.0
grow_horizontal = 2
grow_vertical = 2
text = "PLAY GAEM"

[node name="InstructionsBtn" type="Button" parent="." unique_id=1703166879]
unique_name_in_owner = true
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 433.0
offset_top = 346.0
offset_right = -414.0
offset_bottom = -232.0
grow_horizontal = 2
grow_vertical = 2
text = "HOW???"

[node name="OptionsBtn" type="Button" parent="." unique_id=1452557018]
unique_name_in_owner = true
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 433.0
offset_top = 435.0
offset_right = -414.0
offset_bottom = -143.0
grow_horizontal = 2
grow_vertical = 2
text = "THERE'S OPTIONS"
